@@ -1,5 +1,5 @@
 {
-  "name": "gravfield",
+  "name": "gravityfield",
   "version": "1.0.0",
   "description": "This is a game Kevin Deems and Neel Bhagwat are going to create with Node.js",
   "main": "./www/app.js",
@@ -10,7 +10,6 @@
     "Game",
     "Gravity",
     "Field",
-    "Node.js",
     "html5-css3-js"
   ],
   "author": "Kevin Deems and Neel Bhagwat",
@@ -18,6 +17,7 @@
   "dependencies": {
     "express": "^4.15.2",
     "http": "0.0.0",
+    "nodemailer": "^4.0.1",
     "path": "^0.12.7",
     "socket.io": "^1.7.3"
   }
