@@ -113,6 +113,66 @@
           </div>
        </div>
     </div>
+    <!-- Rules Modal -->
+    <div class="modal fade" id="myRulesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+       <div class="modal-dialog" role="document">
+          <div class="modal-content">
+             <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title text-left" id="myModalLabel">?GravField?</h4>
+             </div>
+             <div class="modal-body">
+               <div class="row">
+                 <div class="col-md-12">
+                   <div class="panel-group" id="dropDowns">
+                     <div class="panel panel-default">
+                       <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#dropDown" data-target="#gettingStarted">
+                         <h4 class="panel-title" id="1">
+        								    <a class="ing">Getting Started</a>
+        								 </h4>
+                       </div>
+                       <div id="gettingStarted" class="panel-collapse collapse" style="height: 0px;">
+        									 <div class="panel-body">
+                             <ul>
+                               <li><p>You are a star, of different shapes and sizes</p></li>
+                               <li><p>Arrow Keys and Spacebar to move you from enemies</p></li>
+                               <li><p>Avoid obstacles, larger players, and the bottom of the screen...</p></li>
+                               <li><p>Screen width: large ---- Screen height: much smaller</p></li>
+                             </ul>
+        									 </div>
+        							 </div>
+                     </div>
+                     <div class="panel panel-default">
+                       <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#dropDown" data-target="#otherInfo">
+                         <h4 class="panel-title" id="2">
+        							      <a class="ing">Other Information</a>
+        								 </h4>
+                       </div>
+                       <div id="otherInfo" class="panel-collapse collapse" style="height: 0px;">
+        									 <div class="panel-body">
+        											 <p>Beware Pitch Black counter</p>
+        									 </div>
+        							 </div>
+                     </div>
+                     <div class="panel panel-default">
+                       <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#dropDown" data-target="#aboutUs">
+                         <h4 class="panel-title" id="3">
+                            <a class="ing">About Us</a>
+                         </h4>
+                       </div>
+                       <div id="aboutUs" class="panel-collapse collapse" style="height: 0px;">
+        									 <div class="panel-body">
+        											 <p>Kevin and Neel<br>We are just two programmers going into our freshmen year at George Washington University.</p>
+        									 </div>
+        							 </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+          </div>
+       </div>
+    </div>
     <script src="scripts/socket.io.min.js"></script>
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/bootstrapScript.js"></script>
